reddit & dev.to pagination done. postCard css done

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- 
+      <a target="_blank" href="https://icons8.com/icons/set/light-on">Light On icon</a> 
+      icon by <a target="_blank" href="https://icons8.com">Icons8</a> 
+    -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
